# DeepClean

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  environment.yaml  index.html  pyproject.toml
.github/workflows/: ci-tests.yaml  sandbox.yaml
libs/architectures/: pyproject.toml
libs/architectures/deepclean/architectures/: __init__.py  convolutional_autoencoder.py
libs/architectures/tests/: test_ae.py
libs/base/: pyproject.toml
libs/export/: pyproject.toml
libs/export/deepclean/: export.py
libs/export/deepclean/export/: model.py  repo.py
libs/export/tests/: test_export.py
libs/gwftools/: pyproject.toml
libs/gwftools/deepclean/gwftools/: channels.py  frames.py  io.py
libs/gwftools/tests/: test_channels.py  test_frames.py  test_io.py
libs/infer/: pyproject.toml
libs/infer/deepclean/infer/: callback.py  clean.py  frame_crawler.py  load.py  postprocessing.py  production.py  pseudo.py  write.py
libs/infer/deepclean/infer/async/: writer.py
libs/infer/deepclean/infer/asynchronous/: __init__.py  loader.py  sync_utils.py  writer.py
libs/infer/tests/: conftest.py  test_callback.py  test_frame_crawler.py  test_load.py  test_pseudo.py  test_write.py
libs/infer/tests/async/: test_writer.py
libs/infer/tests/asynchronous/: test_loader.py  test_writer.py
libs/logging/: pyproject.toml
libs/logging/deepclean/: logging.py
libs/networks/: pyproject.toml
libs/networks/deepclean/networks/: __init__.py  convolutional_autoencoder.py
libs/networks/tests/: test_ae.py
libs/runner/: pyproject.toml  runner.py
libs/runner/runner/: cli.py  env.py  project.py
libs/serve/: pyproject.toml
libs/serve/deepclean/: serve.py
libs/signal/: pyproject.toml
libs/signal/deepclean/signal/: __init__.py  filter.py  op.py  scaler.py
libs/signal/tests/: test_filter.py  test_op.py
libs/trainer/: pyproject.toml
libs/trainer/deepclean/trainer/: __init__.py  analysis.py  criterion.py  dataloader.py  trainer.py  utils.py  viz.py  wrapper.py
libs/trainer/tests/: test_criterion.py  test_dataloader.py  test_trainer.py  test_wrapper.py
libs/utils/: pyproject.toml
libs/utils/deepclean/: utils.py
libs/utils/deepclean/gwftools/: frames.py
libs/utils/deepclean/utils/: channels.py  filtering.py
libs/utils/tests/: test_frames.py
libs/viz/: pyproject.toml
libs/viz/deepclean/viz/: __init__.py  plots.py  utils.py
projects/: README.md  pyproject.toml  runner.py
projects/analysis/: analysis.py  pyproject.toml
projects/export/: export.py  pyproject.toml
projects/inference/: infer.py  pyproject.toml
projects/microservice/: Dockerfile  README.md  build.sh  environment.yaml  pyproject.toml  run.sh  singularity-compose.yml
projects/microservice/cleaner/: Dockerfile  cleaner.py  pyproject.toml
projects/microservice/cleaner/cleaner/: cleaner.py  dataloader.py  main.py  utils.py  writer.py
projects/microservice/cleaner/cleaner/cleaner/: cleaner.py  dataloader.py  writer.py
projects/microservice/exporter/: pyproject.toml
projects/microservice/exporter/exporter/: exporter.py  main.py
projects/microservice/exporter/tests/: test_exporter.py
projects/microservice/infer/: Dockerfile  pyproject.toml
projects/microservice/monitor/: pyproject.toml
projects/microservice/monitor/monitor/: main.py
projects/microservice/sandbox/: environment.yaml  pyproject.toml  sandbox.ipynb
projects/microservice/trainer/: pyproject.toml
projects/microservice/trainer/trainer/: checks.py  dataloader.py  main.py  monitor.py  trainer.py
projects/microservice/utils/: pyproject.toml
projects/microservice/utils/microservice/: deployment.py  frames.py
projects/sandbox/: README.md  pyproject.toml  run.sh
projects/sandbox/analyze/: README.md  analyze.py  pyproject.toml
projects/sandbox/export/: README.md  export.py  pyproject.toml
projects/sandbox/infer/: README.md  infer.py  pyproject.toml  test_infer.py
projects/sandbox/infer_test/: pyproject.toml  test_infer.py
projects/sandbox/train/: README.md  pyproject.toml  train.py
projects/sandbox/train/tests/: test_train.py
projects/sandbox/train/train/: data_utils.py  train.py
projects/training/: README.md  pyproject.toml  train.py
projects/training/train/: data_utils.py  train.py
