[tool.poetry]
name = "deepclean"
version = "0.0.1"
description = "End-to-end DeepClean training, inference, and analysis repo"
authors = [
    "Alec Gunny <alec.gunny@ligo.org>",
    "Tri Nguyen"
]

[tool.poetry.dependencies]
python = ">=3.8,<3.10"

[tool.poetry.group.dev.dependencies]
pre-commit = "^2.16"

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.tox
  | _build
  | dist
  | docs
)/
'''

[tool.isort]
known_first_party = ["deepclean"]
multi_line_output = 3
include_trailing_comma = true

[build-system]
requires = ["poetry>=1.2", "conda>4.2"]
build-backend = "poetry.masonry.api"
