[tool.poetry]
name = "deepclean.gwftools"
version = "0.0.1"
description = "Utilites for managing gwf file conventions"
authors = ["Alec Gunny <alec.gunny@gmail.com>"]
# readme = "README.md"
packages = [
    {include = "deepclean"}
]

[tool.poetry.dependencies]
python = "^3.8,<3.11"
"deepclean.base" = {path = "../base", develop = true}

[tool.poetry.dev-dependencies]
pytest = "^6.2"

[build-system]
requires = ["poetry>=1.2"]
build-backend = "poetry.masonry.api"
