[tool.poetry]
name = "deepclean.infer"
version = "0.0.1"
description = "DeepClean inference utilities"
authors = ["Alec Gunny <alec.gunny@gmail.com>"]
# readme = "README.md"
packages = [
    {include = "deepclean"}
]

[tool.poetry.dependencies]
python = "^3.8,<3.10"
numpy = "^1.21"
tritonclient = {extras = ["all"], version = "^2.18.0"}

"deepclean.gwftools" = {path = "../gwftools", develop = true}
"deepclean.signal" = {path = "../signal", develop = true}

[tool.poetry.dependencies."hermes.stillwater"]
path = "../../gw-iaas/libs/hermes/hermes.stillwater"
develop = true

[tool.poetry.dev-dependencies]
pytest = "^6.2"

[build-system]
requires = ["poetry>=1.2"]
build-backend = "poetry.masonry.api"
