[tool.poetry]
name = "deepclean.infer"
version = "0.0.1"
description = "DeepClean inference utilities"
authors = ["Alec Gunny <alec.gunny@gmail.com>"]
# readme = "README.md"
packages = [
    {include = "deepclean"}
]

[tool.poetry.dependencies]
python = "^3.8,<3.11"
tritonclient = {extras = ["all"], version = "^2.18.0"}
"deepclean.utils" = {path = "../utils", develop = true}

[tool.poetry.dev-dependencies]
pytest = "^6.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
