[tool.poetry]
name = "deepclean.infer"
version = "0.0.1"
description = "DeepClean inference utilities"
authors = ["Alec Gunny <alec.gunny@gmail.com>"]
# readme = "README.md"
packages = [
    {include = "deepclean"}
]

[tool.poetry.dependencies]
python = "^3.8,<3.11"
scipy = "^1.7"

"deepclean.utils" = {path = "../utils", develop = true}
"deepclean.logging" = {path = "../logging", develop = true}

[tool.poetry.dev-dependencies]
pytest = "^7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
