[tool.poetry]
name = "deepclean.logging"
version = "0.0.1"
description = "Utilities for standardizing logging practices"
authors = ["Alec Gunny <alec.gunny@gmail.com>"]
# readme = "README.md"
packages = [
    {include = "deepclean"}
]

[tool.poetry.dependencies]
python = "^3.8,<3.11"

[tool.poetry.dev-dependencies]
pytest = "^6.2"

[build-system]
requires = ["poetry>=1.2"]
build-backend = "poetry.masonry.api"
