[tool.poetry]
name = "deepclean.signal"
version = "0.0.1"
description = "DeepClean signal processing utilities"
authors = ["Alec Gunny <alec.gunny@gmail.com>"]
# readme = "README.md"
packages = [
    {include = "deepclean"}
]

[tool.poetry.dependencies]
python = "^3.8,<3.11"
numpy = "^1.21"
scipy = "^1.7"

[tool.poetry.dev-dependencies]
pytest = "^6.2"

[build-system]
requires = ["poetry>=1.2"]
build-backend = "poetry.masonry.api"
