[tool.poetry]
name = "deepclean.trainer"
version = "0.0.1"
description = "DeepClean training helper functions"
authors = ["Alec Gunny <alec.gunny@gmail.com>", "Tri Nguyen"]
# readme = "README.md"
packages = [
    {include = "deepclean"}
]

[tool.poetry.dependencies]
python = "^3.8,<3.11"
torch = {version = "^1.10", source = "torch"}
typeo = {git = "https://github.com/ML4GW/typeo.git", branch = "main"}
ml4gw = {path = "../../ml4gw", develop = true}

"deepclean.utils" = {path = "../utils", develop = true}
"deepclean.architectures" = {path = "../architectures", develop = true}

[[tool.poetry.source]]
name = "torch"
url = "https://download.pytorch.org/whl/cu116"
secondary = true
default = false

[tool.poetry.dev-dependencies]
pytest = "^6.2"

[build-system]
requires = ["poetry>=1.2"]
build-backend = "poetry.masonry.api"
