[tool.poetry]
name = "deepclean.trainer"
version = "0.0.1"
description = "DeepClean training helper functions"
authors = ["Alec Gunny <alec.gunny@gmail.com>", "Tri Nguyen"]
# readme = "README.md"
packages = [
    {include = "deepclean"}
]

[tool.poetry.dependencies]
python = "^3.8,<3.11"
torch = {version = "^1.10"}
ml4gw = {path = "../../ml4gw", develop = true}
"deepclean.utils" = {path = "../utils", develop = true}

[tool.poetry.dev-dependencies]
pytest = "^6.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.masonry.api"
