[tool.poetry]
name = "deepclean.utils"
version = "0.0.1"
description = "General deepclean utilities"
authors = ["Alec Gunny <alec.gunny@gmail.com>"]
# readme = "README.md"
packages = [
    {include = "deepclean"}
]

[tool.poetry.dependencies]
python = "^3.8,<3.11"
scipy = "^1.7"

[tool.poetry.dev-dependencies]
pytest = "^6.2"

[build-system]
requires = ["poetry>=1.2"]
build-backend = "poetry.core.masonry.api"
