[tool.poetry]
name = "train"
version = "0.0.1"
description = "Training DeepClean on archival NDS2 data"
authors = ["Alec Gunny <alec.gunny@gmail.com>"]
# readme = "README.md"

[tool.poetry.scripts]
train = "train.train:main"

[tool.poetry.dependencies]
python = "^3.8,<3.10"

"deepclean.trainer" = {path = "../../libs/trainer", develop = true, extras=["wrapper"]}
"deepclean.logging" = {path = "../../libs/logging", develop = true}

[tool.poetry.dev-dependencies]
pytest = "^6.2"

[build-system]
requires = ["poetry>=1.2"]
build-backend = "poetry.masonry.api"

[tool.typeo]
channels = [
    "H1:GDS-CALIB_STRAIN",
    "H1:PEM-CS_MAINSMON_EBAY_1_DQ",
    "H1:ASC-INP1_P_INMON",
    "H1:ASC-INP1_Y_INMON",
    "H1:ASC-MICH_P_INMON",
    "H1:ASC-MICH_Y_INMON",
    "H1:ASC-PRC1_P_INMON",
    "H1:ASC-PRC1_Y_INMON",
    "H1:ASC-PRC2_P_INMON",
    "H1:ASC-PRC2_Y_INMON",
    "H1:ASC-SRC1_P_INMON",
    "H1:ASC-SRC1_Y_INMON",
    "H1:ASC-SRC2_P_INMON",
    "H1:ASC-SRC2_Y_INMON",
    "H1:ASC-DHARD_P_INMON",
    "H1:ASC-DHARD_Y_INMON",
    "H1:ASC-CHARD_P_INMON",
    "H1:ASC-CHARD_Y_INMON",
    "H1:ASC-DSOFT_P_INMON",
    "H1:ASC-DSOFT_Y_INMON",
    "H1:ASC-CSOFT_P_INMON",
    "H1:ASC-CSOFT_Y_INMON"
]
output_directory = "results/test"
sample_rate = 4096
t0 = 1239935251
duartion = 2000
data_directory = "data/1239935251/2000"
valid_frac = 0.25

kernel_length = 8
kernel_stride = 0.25
chunk_length = 0

filt_fl = 55.0
filt_fh = 65.0
filter_order = 8

batch_size = 256
max_epochs = 100
lr = 0.008
patience = 10
early_stop = 25

fftlength = 2
overlap = 0.5
alpha = 1.0

device = "cuda"
profile = false

[tool.typeo.commands.autoencoder]
