[tool.poetry]
name = "cleaner"
version = "0.0.1"
description = "Production DeepClean cleaning service"
authors = ["Alec Gunny <alec.gunny@gmail.com>"]
# readme = "README.md"

[tool.poetry.scripts]
clean = "cleaner:main"

[tool.poetry.dependencies]
python = "^3.8,<3.10"

"deepclean.logging" = {path = "../../../libs/logging", develop = true}
"deepclean.infer" = {path = "../../../libs/infer", develop = true}
"hermes.typeo" = {path = "../../../gw-iaas/libs/hermes/hermes.typeo", develop = true}

[tool.poetry.dev-dependencies]
pytest = "^6.2"

[build-system]
requires = ["poetry>=1.2"]
build-backend = "poetry.masonry.api"
