[tool.poetry]
name = "cleaner"
version = "0.0.1"
description = "Production DeepClean cleaning service"
authors = ["Alec Gunny <alec.gunny@gmail.com>"]
# readme = "README.md"

[tool.poetry.scripts]
clean = "cleaner.cleaner:main"

[tool.poetry.dependencies]
python = "^3.8,<3.11"
typeo = {path = "../../../typeo", develop = true}
microservice = {path = "../utils", develop = true}

"deepclean.logging" = {path = "../../../libs/logging", develop = true}
"deepclean.infer" = {path = "../../../libs/infer", develop = true}
"deepclean.utils" = {path = "../../../libs/utils", develop = true}

[tool.poetry.dependencies."hermes.aeriel"]
path = "../../../hermes/hermes/hermes.aeriel"
develop = true

[tool.poetry.dev-dependencies]
pytest = "^7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
