[tool.poetry]
name = "monitor"
version = "0.0.1"
description = "DeepClean production data product monitoring app"
authors = ["Alec Gunny <alecg@mit.edu>"]

[tool.poetry.scripts]
train = "monitor.main:main"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
typeo = {path = "../../../typeo", develop = true}
microservice = {path = "../utils", develop = true}

"deepclean.logging" = {path = "../../../libs/logging", develop = true}
"deepclean.utils" = {path = "../../../libs/utils", develop = true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
