[tool.poetry]
name = "export"
version = "0.0.1"
description = "Export DeepClean for IaaS inference"
authors = ["Alec Gunny <alec.gunny@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
export-model = "export:export"

[tool.poetry.dependencies]
python = "^3.8,<3.10"
packaging = "<21.0"
numpy = ">=1.22,<1.22.4"
torch = {version = "^1.13.1", source = "torch"}

"deepclean.export" = {path = "../../../libs/export", develop = true}
"deepclean.gwftools" = {path = "../../../libs/gwftools", develop = true}
"deepclean.architectures" = {path = "../../../libs/architectures", develop = true}
"deepclean.logging" = {path = "../../../libs/logging", develop = true}
"hermes.typeo" = "^0.1.5"
h5py = "^3.7.0"

[tool.poetry.dependencies."hermes.quiver"]
path = "../../../hermes/hermes/hermes.quiver"
develop = true

[[tool.poetry.source]]
name = "torch"
url = "https://download.pytorch.org/whl/cpu"

[tool.poetry.dev-dependencies]
pytest = "^6.2"

[build-system]
requires = ["poetry>=1.2"]
build-backend = "poetry.masonry.api"
