[tool.poetry]
name = "infer"
version = "0.0.1"
description = "Simple inference script on existing frame files"
authors = ["Alec Gunny <alec.gunny@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
infer = "infer:main"

[tool.poetry.dependencies]
python = "^3.8,<3.10"

"deepclean.logging" = {path = "../../../libs/logging", develop = true}
"deepclean.infer" = {path = "../../../libs/infer", develop = true}
"deepclean.signal" = {path = "../../../libs/signal", develop = true}

"hermes.aeriel" = {path = "../../../hermes/hermes/hermes.aeriel", develop = true, extras = ["serve"]}
"hermes.typeo" = "^0.1.5"

[tool.poetry.dev-dependencies]
pytest = "^6.2"

[build-system]
requires = ["poetry>=1.2"]
build-backend = "poetry.masonry.api"
