[tool.poetry]
name = "test-infer"
version = "0.0.1"
description = "Export DeepClean for IaaS inference"
authors = ["Alec Gunny <alec.gunny@gmail.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.8,<3.10"
packaging = "<21.0"
numpy = ">=1.22,<1.22.4"

"deepclean.infer" = {path = "../../../libs/infer", develop = true}
"deepclean.export" = {path = "../../../libs/export", develop = true}
"deepclean.gwftools" = {path = "../../../libs/gwftools", develop = true}
"deepclean.architectures" = {path = "../../../libs/architectures", develop = true}
"deepclean.logging" = {path = "../../../libs/logging", develop = true}
h5py = "^3.7.0"

[tool.poetry.dependencies."hermes.quiver"]
path = "../../../hermes/hermes/hermes.quiver"
develop = true
extras = ["torch"]

[tool.poetry.dev-dependencies]
pytest = "^6.2"

[build-system]
requires = ["poetry>=1.2"]
build-backend = "poetry.masonry.api"
