[tool.poetry]
name = "train"
version = "0.0.1"
description = "Training DeepClean on archival NDS2 data"
authors = ["Alec Gunny <alec.gunny@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
train = "train:main"

[tool.poetry.dependencies]
python = "^3.8,<3.10"

"deepclean.gwftools" = {path = "../../../libs/gwftools", develop = true}
"deepclean.logging" = {path = "../../../libs/logging", develop = true}
"deepclean.trainer" = {path = "../../../libs/trainer", develop = true, extras=["wrapper"]}

[[tool.poetry.source]]
name = "torch"
url = "https://download.pytorch.org/whl/cu116"
secondary = true
default = false

[tool.poetry.dev-dependencies]
pytest = "^6.2"

[build-system]
requires = ["poetry>=1.2"]
build-backend = "poetry.masonry.api"
