[tool.poetry]
name = "train"
version = "0.0.1"
description = "Training DeepClean on a single dataset"
authors = ["Alec Gunny <alec.gunny@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
train = "train:main"

[tool.poetry.dependencies]
python = "^3.8,<3.11"
gwpy = "^2.1"

typeo = {path = "../../../typeo", develop = true}
mldatafind = {path = "../../../mldatafind", develop = true}
"deepclean.architectures" = {path = "../../../libs/architectures", develop = true}
"deepclean.logging" = {path = "../../../libs/logging", develop = true}
"deepclean.trainer" = {path = "../../../libs/trainer", develop = true}

[tool.poetry.dev-dependencies]
pytest = "^6.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
